--- a/view/recherche.view.html
+++ b/view/recherche.view.html
@@ -4,7 +4,7 @@
             <td><label for='motCle'> Rechercher : </label></td>
             <td><input type='text' size='75' name='motCle' id='motCle'/></td>
             <td><input type='submit' value='Rechercher !' name='btnRechercher' id='btnRechercher' /></td>
-            <td><a href='index.php?action=effectuerRechercheAvancee'>Recherche avancée</a></td>
+            <td class="tdCenter"><a href='index.php?action=effectuerRechercheAvancee'>Recherche avancée</a></td>
         </tr>
     </table>
 </form>
