Modification type champ recherche (adaptation input type search)

--- a/view/recherche.view.html
+++ b/view/recherche.view.html
@@ -2,7 +2,7 @@
     <table> 
         <tr>
             <td><label for='motCle'> Rechercher : </label></td>
-            <td><input type='text' size='75' name='motCle' id='motCle'/></td>
+            <td><input type='search' size='75' name='motCle' id='motCle'/></td>
             <td><input type='submit' value='Rechercher !' name='btnRechercher' id='btnRechercher' /></td>
             <td class="tdCenter"><a href='index.php?action=effectuerRechercheAvancee'>Recherche avancée</a></td>
         </tr>
