Modification action validation enregistrement

--- a/view/enregistrement.view.html
+++ b/view/enregistrement.view.html
@@ -36,7 +36,7 @@
 
 <a href="index.php?action=initialiser"> Revenir &agrave; l'accueil </a> <br/><br/>
 
-<form method="POST" action="index.php?action=enregistrer">
+<form method="POST" action="index.php?action=validerInscription">
     <fieldset>
         <legend> Mon type de compte </legend>
         <table>
