--- a/view/enregistrement.view.html
+++ b/view/enregistrement.view.html
@@ -156,7 +156,7 @@
                     <td colspan='2'><label for='desc'>D&eacute;crivez-vous :</label></td>
                 </tr>
                 <tr>
-                    <td colspan='2'><textarea rows='4' cols='50'>Vos sports pr&eacute;f&eacute;r&eacute;s ? Vos loisirs autres ? Votre philosophie de vie ?</textarea></td>
+                    <td colspan='2'><textarea rows='4' cols='50' name='desc'>Vos sports pr&eacute;f&eacute;r&eacute;s ? Vos loisirs autres ? Votre philosophie de vie ?</textarea></td>
                 </tr>
                 <tr>
                     <td><label for="uploadAvatar">Photo de profil : </label></td>
