Correction textarea (ajout d'un name desc pour l'identification)

--- a/view/enregistrement.view.html
+++ b/view/enregistrement.view.html
@@ -103,7 +103,7 @@
                     <td colspan='2'><label for='desc'>D&eacute;crivez-vous :</label></td>
                 </tr>
                 <tr>
-                    <td colspan='2'><textarea rows='4' cols='50'>Faites une petite description de vous :)</textarea></td>
+                    <td colspan='2'><textarea rows='4' cols='50' name="desc">Faites une petite description de vous :)</textarea></td>
                 </tr>
                 <tr>
                     <td><label for="uploadAvatar">Photo de profil :</label></td>
