Tous les champs de l'organisateur (à part description et photo) mis en required

--- a/view/enregistrement.view.html
+++ b/view/enregistrement.view.html
@@ -97,7 +97,7 @@
                 </tr>   
                 <tr>
                     <td><label for='numTel'>Num&eacute;ro de t&eacute;l&eacute;phone :</label></td>
-                    <td><input type='tel' size='10' name='numTel'/></td>
+                    <td><input type='tel' size='10' name='numTel' required/></td>
                 </tr> 
                 <tr>
                     <td colspan='2'><label for='desc'>D&eacute;crivez-vous :</label></td>
@@ -115,16 +115,16 @@
             <table>
                 <tr>
                     <td><label>Nom et pr&eacute;nom :</label></td>
-                    <td><input type='text' size='25' placeholder="Pr&eacute;nom" name="nomRef"/>
-                        <input type='text' size='25' placeholder='Nom' name='prenomRef'/></td>
+                    <td><input type='text' size='25' placeholder="Pr&eacute;nom" name="nomRef" required/>
+                        <input type='text' size='25' placeholder='Nom' name='prenomRef' required /></td>
                 </tr>
                 <tr>
                     <td><label for='mailRef'>Adresse mail :</label></td>
-                    <td><input type='mail' size='50' name='mailRef' placeholder="Si possible diff&eacute;rente de celle de l'organisation"/></td>
+                    <td><input type='mail' size='50' name='mailRef' placeholder="Si possible diff&eacute;rente de celle de l'organisation" required/></td>
                 </tr>
                 <tr>
                     <td><label for='numTelRef'>Num&eacute;ro de t&eacute;l&eacute;phone :</label></td>
-                    <td><input type='tel' size='10' name='numTelRef'/></td>
+                    <td><input type='tel' size='10' name='numTelRef' required/></td>
                 </tr>
             </table>
         </fieldset>
