--- a/css/stylePrincipal.css
+++ b/css/stylePrincipal.css
@@ -8,41 +8,83 @@
  *
 */
 
+@font-face
+{
+    font-family: "Open Sans";
+    url: ('./fonts/OpenSans-Light.ttf');
+    
+}
 #zoneHaute
 {
-    text-align: center;   
-}
+    text-align: center;  
+    font-family: Open Sans;
+;}
 
 #zoneRecherche
 {
-    width:50em;
+    font-family: Open Sans;
+    font-size: 13px;
+    width:63em;
     margin: 0 auto;
-    border: 0.05em solid black;   
+    padding-left: 2em;
 }
 
 #zoneMenu
 {
-    position: absolute;
-    width: 15em;
+    position: fixed;
+    font-family: Open Sans;
+    font-size: 0.77em;
+    width: 19em;
     margin-left: 1em;
+    margin-top: 0px;
 }
 
 #zoneMenu #zoneConnexion, #zoneMenu #zoneCalendrier, #zoneMenu #zoneMenuSports
 {
-    border: 0.05em solid black;
     padding-left: 0.75em;
     padding-bottom: 0.75em;
     padding-right: 0.75em;
-    margin-top: 2em;
+    margin-top: 1em;
+}
+
+#zoneMenuSports li
+{
+    font-variant: small-caps;
+    list-style-type: none;
+}
+
+#zoneMenuSports a:hover
+{
+    font-family: Arial;
+
+    border: dotted black 1px;
+    width: 15em;
+    margin-top: 5px;
+    padding-left: 2px;   
+    background-color: lightgray;
+}
+
+#zoneMenuSports ul
+{
+    padding-left: 2px;
+}
+
+#zoneMenuSports a 
+{
+    font-style: normal;
 }
 
 #zoneCentrale
 {
-    position: relative;
+    position: absolute;
     margin-left: 20em;
     margin-top: 1.5em;
 }
 
+#zoneCentrale tr
+{
+    border-width: 14px;
+}
 
 
 
