--- a/view/recherche.view.html
+++ b/view/recherche.view.html
@@ -1,10 +1,8 @@
 <form method='POST' action='index.php?action=rechercher'>
     <table> 
         <tr>
-            <td><label for='motCle'> Rechercher : </label></td>
-            <td><input type='search' size='75' name='motCle' id='motCle'/></td>
+            <td><input type='search' size='75' name='motCle' id='motCle' placeholder="Rechercher un &eacute;v&eacute;nement..."/></td>
             <td><input type='submit' value='Rechercher !' name='btnRechercher' id='btnRechercher' /></td>
-            <td class="tdCenter"><a href='index.php?action=effectuerRechercheAvancee'>Recherche avancée</a></td>
         </tr>
     </table>
 </form>
