--- a/view/recherche.view.html
+++ b/view/recherche.view.html
@@ -1,4 +1,4 @@
-<form method='POST' action='index.php?action=rechercher'>
+<form method='POST' action='index.php?action=rechercherEvenement'>
     <table> 
         <tr>
             <td><input type='search' size='75' name='motCle' id='motCle' placeholder="Rechercher un &eacute;v&eacute;nement..."/></td>
